--- a/OneProjetcGitHub/OneProjetcGitHub/MyCustomXIBCell.xib
+++ b/OneProjetcGitHub/OneProjetcGitHub/MyCustomXIBCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="200" id="KGk-i7-Jjw" customClass="MyCustomXIBCell" customModule="OneProjetcGitHub" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellXIB" rowHeight="200" id="KGk-i7-Jjw" customClass="MyCustomXIBCell" customModule="OneProjetcGitHub" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="157"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -31,7 +31,6 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="image" destination="CvY-WA-bIX" id="deA-zU-BD3"/>
                 <outlet property="label" destination="8KH-XF-ffv" id="Jel-oW-Hrg"/>
             </connections>
             <point key="canvasLocation" x="131.8840579710145" y="97.433035714285708"/>
